src/objects/BE_SingleRelatedList_QuickAction__mdt.object
<CustomObject>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomFields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ModeAction__c</fullName>
        <label>ModeAction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObjectType__c</fullName>
        <label>sObjectType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>BE_SingleRelatedList_QuickAction</label>
    <pluralLabel>BE_SingleRelatedList_QuickActions</pluralLabel>
</CustomObject>